# realcugan-ncnn-vulkan-python

./: .gitmodules  MANIFEST.in  README.md  setup.cfg  setup.py
.github/workflows/: ci.yml  release.yml
real-cugan_ncnn_vulkan_python/: real_cugan.i  real_cugan_ncnn_vulkan.py
real_cugan_ncnn_vulkan_python/: CMakeLists.txt  real_cugan_wrapped.cpp  real_cugan_wrapped.h
realcugan_ncnn_vulkan_python/: CMakeLists.txt  realcugan.i  realcugan_ncnn_vulkan.py  realcugan_wrapped.cpp  realcugan_wrapped.h
tests/: test_upscale.py
