[metadata]
name = realcugan-ncnn-vulkan-python
version = 1.0.0
author = K4YT3X
author_email = i@k4yt3x.com
maintainer = ArchieMeng
maintainer_email = archiemeng@protonmail.com
license = MIT
license_file = LICENSE
platform = any
description = A Python FFI of nihui/realcugan-ncnn-vulkan achieved with SWIG
url = https://github.com/media2x/realcugan-ncnn-vulkan-python
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Environment :: Console
    Programming Language :: Python
    Programming Language :: Python :: 3
    Operating System :: OS Independent
keywords =
    realcugan
    ncnn
    vulkan
    swig

[options]
packages = find:
install_requires = pillow
python_requires = >=3.6
